# hfc

./: .gitignore  CMakeLists.txt  README.md  xmake.lua
component/: CMakeLists.txt  xmake.lua
doc/html/: annotated.html  annotated_dup.js  classes.html  files.html  files_dup.js  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  graph_legend.html  httpc_8c.html  httpc_8c.js  httpc_8c__incl.map  httpc_8c__incl.md5  httpc_8c_a8a0e8504bb00ceecc037ef20fde54bf5_icgraph.map  httpc_8c_a8a0e8504bb00ceecc037ef20fde54bf5_icgraph.md5  httpc_8c_afc4f392a2100a59d31d4ffa474e78b65_cgraph.map  httpc_8c_afc4f392a2100a59d31d4ffa474e78b65_cgraph.md5  httpc_8h.html  httpc_8h.js  httpc_8h__dep__incl.map  httpc_8h__dep__incl.md5  httpc_8h__incl.map  httpc_8h__incl.md5  httpc_8h_source.html  httpc__config_8h.html  httpc__config_8h.js  httpc__config_8h__dep__incl.map  httpc__config_8h__dep__incl.md5  httpc__config_8h__incl.map  httpc__config_8h__incl.md5  httpc__config_8h_source.html  index.html  navtreedata.js  navtreeindex0.js  structhttpc2__t.html  (+13 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  (+21 more)
example/: get_example.c  httpc2_example.c  post_example.c
httpc/: CMakeLists.txt  Doxyfile
httpc/src/: httpc.c
src/: httpc.c  httpc.h  httpc_config.h
test/: get_example.c  httpc2_example.c  main.c
(+2 files in other folders)
